@@ -19,6 +19,7 @@
 - MurmurHash3, Random and Null (default) partitioners are available
 - fixed utf8 string deserialization
 - fixed issue 59 (https://github.com/pchalamet/cassandra-sharp/issues/59) - release of prepared query is now possible
+- Prepared queries are now disposable
 
 version 3.2.2
 - fixed issue 49 (https://github.com/pchalamet/cassandra-sharp/issues/49)
